Otimizações de JS.

--- a/src/main/resources/templates/deletar-confirma.html
+++ b/src/main/resources/templates/deletar-confirma.html
@@ -102,20 +102,7 @@
         </div>
     </div>
 
-    <script>
-        let inputSenha = document.querySelector('input[name="senhaConfirmacao"]');
-        
-        inputSenha.addEventListener('focus', function() {
-            this.style.borderColor = '#c0392b';
-        });
-        inputSenha.addEventListener('blur', function() {
-            this.style.borderColor = '#ccc';
-        });
-        
-        inputSenha.addEventListener('input', function() {
-            this.value = this.value.replace(/[^0-9]/g, '');
-        });
-    </script>
+    <script src="/js/deletar.js"></script>
 
 </body>
 </html>
