--- a/src/main/resources/templates/editar.html
+++ b/src/main/resources/templates/editar.html
@@ -4,24 +4,6 @@
     <title>Editar Exemplar</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/estilo.css}">
-    <script>
-        // A função permanece a mesma, controlando o readonly e o estilo
-        function toggleEdit(checkbox) {
-            let inputId = checkbox.getAttribute('data-target-id');
-            let input = document.getElementById(inputId);
-            
-            if (checkbox.checked) {
-                input.readOnly = false;
-                input.classList.remove('input-travado');
-                input.classList.add('input-editavel');
-                input.focus();
-            } else {
-                input.readOnly = true;
-                input.classList.remove('input-editavel');
-                input.classList.add('input-travado');
-            }
-        }
-    </script>
 </head>
 <body>
 
@@ -122,5 +104,8 @@
         </div>
 
     </form>
+
+    <script src="/js/editar.js"></script>
+
 </body>
 </html>
