--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head th:fragment="head(titulo)">
     <title th:text="${titulo}">EntomoData</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/estilo.css}">
-    </head>
-
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/components.css}">
+</head>
 <body>
     <div th:fragment="page-header(titulo, subtitulo, cor)" 
          class="header-container" 
