Desligamento automático implementado com sucesso. rograma pronto para primeiro deploy e testes beta.

--- a/src/main/resources/templates/editar.html
+++ b/src/main/resources/templates/editar.html
@@ -4,6 +4,9 @@
     <title>Editar Exemplar</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/estilo.css}">
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
