--- a/src/main/resources/templates/importar-conflito.html
+++ b/src/main/resources/templates/importar-conflito.html
@@ -32,6 +32,9 @@
             border-width: 2px;
         }
     </style>
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
