--- a/src/main/resources/templates/importar-estrategia.html
+++ b/src/main/resources/templates/importar-estrategia.html
@@ -93,6 +93,9 @@
 
         .diff-cell { color: #e67e22; background-color: #fffdf5; font-weight: bold; }
     </style>
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
