--- a/src/main/resources/templates/importar-mapa.html
+++ b/src/main/resources/templates/importar-mapa.html
@@ -3,6 +3,9 @@
 <head>
     <title>Mapear Colunas</title>
     <link rel="stylesheet" th:href="@{/css/estilo.css}">
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
