--- a/src/main/resources/templates/importar-smart.html
+++ b/src/main/resources/templates/importar-smart.html
@@ -59,6 +59,9 @@
         
         .valor-texto { font-weight: 600; color: #2c3e50; }
     </style>
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
