--- a/src/main/resources/templates/deletar-confirma.html
+++ b/src/main/resources/templates/deletar-confirma.html
@@ -4,6 +4,9 @@
     <title>Confirmar Exclusão</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/estilo.css}">
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
