--- a/src/main/resources/templates/importar-resolucao-banco.html
+++ b/src/main/resources/templates/importar-resolucao-banco.html
@@ -62,6 +62,9 @@
             display: flex; gap: 10px; align-items: center; border: 1px solid #eee;
         }
     </style>
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body>
 
