--- a/src/main/resources/templates/sistema-sair.html
+++ b/src/main/resources/templates/sistema-sair.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/estilo.css}">
     <link rel="stylesheet" th:href="@{/css/components.css}">
+
+    <script src="/js/heartbeat.js" defer></script>
+    
 </head>
 <body style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f4f6f8;">
 
